--- a/LoveOpas/app/src/main/res/layout/activity_main.xml
+++ b/LoveOpas/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/screenbackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.acidbricks.products.loveopas.MainActivity">
+    tools:context="com.acidbricks.projects.loveopas.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <ImageButton
+
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:id="@+id/horo"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+    <ImageButton
+
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:id="@+id/love"
+        android:layout_below="@+id/horo"
+        android:layout_alignLeft="@+id/horo"
+        android:layout_alignStart="@+id/horo" />
+    <ImageButton
+
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:id="@+id/about"
+        android:layout_below="@+id/love"
+        android:layout_alignLeft="@+id/love"
+        android:layout_alignStart="@+id/love" />
+
 </RelativeLayout>
