--- a/LoveOpas/app/src/main/res/values/colors.xml
+++ b/LoveOpas/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorMainTheme">#DF0E50</color>
 </resources>
