--- a/LoveOpas/app/src/main/res/layout/activity_about.xml
+++ b/LoveOpas/app/src/main/res/layout/activity_about.xml
@@ -13,7 +13,7 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:minHeight="?attr/actionBarSize"
         android:theme="@style/AppToolbar"
         />
 
