--- a/LoveOpas/app/src/main/res/values/styles.xml
+++ b/LoveOpas/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:thumb">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppToolbar" parent="Theme.AppCompat.Light">
@@ -17,5 +18,7 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
+    <style name="Color1SwitchStyle">
+        <item name="colorControlActivated">@color/colorPrimaryDark</item>
+    </style>
 </resources>
