--- a/LoveOpas/app/src/main/res/layout/activity_horoscope.xml
+++ b/LoveOpas/app/src/main/res/layout/activity_horoscope.xml
@@ -7,26 +7,81 @@
     android:layout_height="match_parent"
     android:id="@+id/horo_relativeLayout"
     tools:context="com.acidbricks.projects.loveopas.Horoscope">
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/imageView"
+        android:background="@drawable/top"
+
+         />
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
-       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/AppToolbar"
+
+        android:layout_alignParentTop="true"
         />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/imageView"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Loading"
-        android:id="@+id/textView"
+        android:background="@drawable/background2"
+        >
 
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="201dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp" />
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal|top"
+    >
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/info"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:id="@+id/signView"
+
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+
+
+            android:text="Loading.."
+            android:id="@+id/textView"
+            android:layout_below="@+id/signView"
+            android:padding="40dp"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/rounded_corner"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textAlignment="center"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|bottom">
+
+
+
+
+
+
+
+        </TextView>
+</RelativeLayout>
+    </FrameLayout>
+
+
+
 
 
 </RelativeLayout>
