--- a/LoveOpas/app/src/main/res/layout-ldpi/activity_about.xml
+++ b/LoveOpas/app/src/main/res/layout-ldpi/activity_about.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="@drawable/aboutmescr_ldpi"
+    tools:context="com.acidbricks.projects.loveopas.About">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
+        android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
-
         android:theme="@style/AppToolbar"
         />
-
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_below="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
 </RelativeLayout>
