--- a/LoveOpas/app/src/main/res/layout-hdpi/activity_horoscope.xml
+++ b/LoveOpas/app/src/main/res/layout-hdpi/activity_horoscope.xml
@@ -55,16 +55,16 @@ android:background="@drawable/background2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="10sp"
 
-
-            android:text="Loading.."
+            android:text="Loading..."
             android:id="@+id/textView"
             android:layout_below="@+id/signView"
             android:padding="40dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/rounded_corner"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:textAlignment="center"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
