--- a/LoveOpas/app/src/main/res/layout-xxxhdpi/activity_horoscope.xml
+++ b/LoveOpas/app/src/main/res/layout-xxxhdpi/activity_horoscope.xml
@@ -56,15 +56,15 @@ android:background="@drawable/background2"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
 
-
-            android:text="Loading.."
+            android:textSize="14sp"
+            android:text="Loading.. Today, you may decide to get a little more conscious about your your health. Filled with positive drive, you may even plan to join a gymnasium or start taking a hard look at your calorie intake. Don\\u2019t go overboard, though! You don\\u2019t want to do it only today, and forget it tomorrow \\u2013 plan and execute in a step-wise manner, so it doesn\\u2019t get a bit too much."
             android:id="@+id/textView"
             android:layout_below="@+id/signView"
-            android:padding="40dp"
-            android:layout_marginBottom="40dp"
+            android:padding="30dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/rounded_corner"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:textAlignment="center"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
