--- a/LoveOpas/app/src/main/res/layout-xxxhdpi/activity_settings.xml
+++ b/LoveOpas/app/src/main/res/layout-xxxhdpi/activity_settings.xml
@@ -167,8 +167,8 @@ android:background="@drawable/background2"
                 android:thumbTint="@color/colorAccent"
                 android:id="@+id/notifySwitch"
                 android:layout_below="@+id/textView6"
-                android:layout_toLeftOf="@+id/dayText"
-                android:layout_toStartOf="@+id/dayText" />
+                android:layout_alignRight="@+id/yearText"
+                android:layout_alignEnd="@+id/yearText" />
 
 
         </RelativeLayout>
