--- a/LoveOpas/app/src/main/res/layout-hdpi/activity_contact_me.xml
+++ b/LoveOpas/app/src/main/res/layout-hdpi/activity_contact_me.xml
@@ -109,7 +109,7 @@
                 android:layout_width="140dp"
                 android:layout_marginBottom="5dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/callButton"
+                android:id="@+id/buttonCall"
                 android:scaleType="fitCenter"
                 android:background="@null"
                 android:adjustViewBounds="true"
