--- a/LoveOpas/app/src/main/res/layout-hdpi/activity_lovecalculator.xml
+++ b/LoveOpas/app/src/main/res/layout-hdpi/activity_lovecalculator.xml
@@ -61,6 +61,8 @@
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:singleLine="true"
+            android:textAlignment="center"
+            android:paddingLeft="10dp"
             android:id="@+id/editText"
             android:background="@drawable/rounded_corner"
             android:layout_below="@+id/textView7"
@@ -78,6 +80,8 @@
             android:layout_centerHorizontal="true" />
 
         <EditText
+            android:textAlignment="center"
+            android:paddingLeft="10dp"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
@@ -86,7 +90,30 @@
             android:background="@drawable/rounded_corner"
             android:layout_below="@+id/textView8"
             android:layout_centerHorizontal="true" />
-</RelativeLayout>
+
+            <ImageButton
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttonCalculate"
+                android:scaleType="fitCenter"
+                android:background="@null"
+                android:layout_marginTop="10dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/email"
+                android:layout_below="@+id/editText2"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Result"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/colorAccent"
+                android:id="@+id/result"
+                android:layout_below="@+id/buttonCalculate"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
     </FrameLayout>
 
 </RelativeLayout>
