--- a/LoveOpas/app/src/main/res/layout-ldpi/activity_contact_me.xml
+++ b/LoveOpas/app/src/main/res/layout-ldpi/activity_contact_me.xml
@@ -108,7 +108,7 @@
             <ImageButton
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/callButton"
+                android:id="@+id/buttonCall"
                 android:layout_marginBottom="5dp"
                 android:scaleType="fitCenter"
                 android:background="@null"
