--- a/LoveOpas/app/src/main/res/layout-ldpi/activity_lovecalculator.xml
+++ b/LoveOpas/app/src/main/res/layout-ldpi/activity_lovecalculator.xml
@@ -48,7 +48,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Your Name:"
             android:textColor="@color/colorAccent"
@@ -57,9 +57,11 @@
             android:layout_centerHorizontal="true" />
 
         <EditText
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="300dp"
             android:layout_height="40dp"
+            android:textAlignment="center"
+            android:paddingLeft="5dp"
             android:singleLine="true"
             android:id="@+id/editText"
             android:background="@drawable/rounded_corner"
@@ -80,13 +82,36 @@
         <EditText
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:singleLine="true"
+            android:textAlignment="center"
+            android:paddingLeft="5dp"
             android:id="@+id/editText2"
             android:background="@drawable/rounded_corner"
             android:layout_below="@+id/textView8"
             android:layout_centerHorizontal="true" />
-</RelativeLayout>
+
+            <ImageButton
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttonCalculate"
+                android:scaleType="fitCenter"
+                android:background="@null"
+                android:adjustViewBounds="true"
+                android:src="@drawable/website"
+                android:layout_below="@+id/editText2"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Result"
+                android:textColor="@color/colorAccent"
+                android:id="@+id/result"
+                android:layout_below="@+id/buttonCalculate"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
     </FrameLayout>
 
 </RelativeLayout>
