--- a/LoveOpas/app/src/main/res/layout-mdpi/activity_horoscope.xml
+++ b/LoveOpas/app/src/main/res/layout-mdpi/activity_horoscope.xml
@@ -56,15 +56,15 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
 
-
-            android:text="Loading.."
+            android:textSize="12sp"
+            android:text="Loading.. "
             android:id="@+id/textView"
             android:layout_below="@+id/signView"
-            android:padding="40dp"
-            android:layout_marginBottom="40dp"
+            android:padding="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_corner"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:textAlignment="center"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
