--- a/LoveOpas/app/src/main/res/layout-mdpi/activity_lovecalculator.xml
+++ b/LoveOpas/app/src/main/res/layout-mdpi/activity_lovecalculator.xml
@@ -6,9 +6,9 @@
     tools:context="com.acidbricks.projects.loveopas.lovecalculator">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="150dp"
         android:id="@+id/imageView"
-        android:background="@drawable/top"
+
 
         />
     <android.support.v7.widget.Toolbar
@@ -26,18 +26,9 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/imageView"
 
-        android:background="@drawable/background2"
+
         >
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/back"
-
-            >
-
-           </LinearLayout>
 
 
         <RelativeLayout
@@ -49,8 +40,8 @@
         >
         <ImageView
 
-            android:layout_width="400dp"
-            android:layout_height="65dp"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
             android:background="@drawable/lovecalculatoricon"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -59,7 +50,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="10dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Your Name:"
             android:textColor="@color/colorAccent"
@@ -68,17 +59,19 @@
             android:layout_centerHorizontal="true" />
 
         <EditText
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_width="400dp"
             android:layout_height="40dp"
             android:singleLine="true"
+            android:textAlignment="center"
+            android:paddingLeft="7dp"
             android:id="@+id/editText"
             android:background="@drawable/rounded_corner"
             android:layout_below="@+id/textView7"
             android:layout_centerHorizontal="true" />
 
         <TextView
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -91,13 +84,38 @@
         <EditText
             android:layout_width="400dp"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
+            android:textAlignment="center"
+            android:paddingLeft="7dp"
             android:singleLine="true"
             android:id="@+id/editText2"
             android:background="@drawable/rounded_corner"
             android:layout_below="@+id/textView8"
             android:layout_centerHorizontal="true" />
-</RelativeLayout>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/buttonCalculate"
+                android:scaleType="fitCenter"
+                android:background="@null"
+                android:layout_marginTop="5dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/email"
+                android:layout_below="@+id/editText2"
+                android:layout_alignRight="@+id/textView8"
+                android:layout_alignEnd="@+id/textView8" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Result"
+                android:textColor="@color/colorAccent"
+                android:id="@+id/result"
+                android:layout_below="@+id/buttonCalculate"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
     </FrameLayout>
 
 </RelativeLayout>
