--- a/LoveOpas/app/src/main/res/layout-mdpi/activity_settings.xml
+++ b/LoveOpas/app/src/main/res/layout-mdpi/activity_settings.xml
@@ -33,8 +33,8 @@
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|top"
-            android:padding="5dp"
+
+
             >
 
             <EditText
@@ -43,25 +43,28 @@
                 android:layout_height="40dp"
                 android:inputType="number"
                 android:ems="10"
+                android:paddingLeft="3dp"
                 android:textAlignment="center"
+
                 android:text="mm"
                 android:textColor="@color/textForeground"
                 android:id="@+id/monthText"
-                android:layout_marginTop="35dp"
+
                 android:width="40dp"
                 android:layout_alignParentTop="true"
-                android:layout_alignLeft="@+id/textView2"
-                android:layout_alignStart="@+id/textView2" />
+                android:layout_alignLeft="@+id/textView5"
+                android:layout_alignStart="@+id/textView5"
+                android:layout_marginTop="43dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Date of Birth:"
                 android:id="@+id/textView2"
-                android:layout_above="@+id/textView3"
+                android:layout_above="@+id/monthText"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:textColor="#ce0948" />
@@ -83,6 +86,7 @@
                 android:layout_height="40dp"
                 android:inputType="number"
                 android:ems="10"
+                android:paddingLeft="3dp"
                 android:textAlignment="center"
                 android:text="dd"
                 android:textColor="@color/textForeground"
@@ -115,7 +119,7 @@
                 android:textAlignment="center"
                 android:text="yyyy"
                 android:textColor="@color/textForeground"
-
+                android:paddingLeft="3dp"
                 android:id="@+id/yearText"
                 android:width="40dp"
                 android:layout_alignBottom="@+id/textView4"
@@ -127,13 +131,13 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Star Select:"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 android:id="@+id/textView5"
                 android:textColor="#ce0948"
                 android:layout_below="@+id/textView3"
                 android:layout_alignLeft="@+id/textView2"
                 android:layout_alignStart="@+id/textView2"
-                android:layout_marginTop="42dp" />
+                android:layout_marginTop="22dp" />
 
             <EditText
                 android:layout_width="210dp"
@@ -143,8 +147,9 @@
                 android:ems="10"
                 android:textAlignment="center"
                 android:text="Enter your star"
-                android:textColor="@color/textForeground"
 
+                android:textColor="@color/textForeground"
+                android:paddingLeft="6dp"
                 android:id="@+id/starText"
                 android:width="140dp"
                 android:layout_below="@+id/textView5"
@@ -154,12 +159,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Notifications:"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 android:id="@+id/textView6"
                 android:textColor="#ce0948"
-                android:layout_marginTop="46dp"
+                android:layout_marginTop="16dp"
                 android:layout_below="@+id/starText"
                 android:layout_alignLeft="@+id/textView5"
                 android:layout_alignStart="@+id/textView5" />
@@ -168,12 +174,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:height="30dp"
-                android:track="@drawable/thumb"
-                android:thumbTint="@color/colorAccent"
                 android:id="@+id/notifySwitch"
+
                 android:layout_below="@+id/textView6"
-                android:layout_toLeftOf="@+id/dayText"
-                android:layout_toStartOf="@+id/dayText" />
+                android:layout_alignRight="@+id/yearText"
+                android:layout_alignEnd="@+id/yearText" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Date of birth:"
+                android:textSize="22sp"
+                android:id="@+id/textView9"
+                android:textColor="#ce0948"
+                android:layout_above="@+id/dayText"
+                android:layout_alignLeft="@+id/monthText"
+                android:layout_alignStart="@+id/monthText" />
 
 
         </RelativeLayout>
