--- a/LoveOpas/app/src/main/res/layout-xxhdpi/activity_settings.xml
+++ b/LoveOpas/app/src/main/res/layout-xxhdpi/activity_settings.xml
@@ -47,10 +47,11 @@ android:background="@drawable/background2"
                 android:text="mm"
                 android:textColor="@color/textForeground"
                 android:id="@+id/monthText"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="64dp"
                 android:width="40dp"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignRight="@+id/textView6"
+                android:layout_alignEnd="@+id/textView6" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -171,8 +172,9 @@ android:background="@drawable/background2"
                 android:thumbTint="@color/colorAccent"
                 android:id="@+id/notifySwitch"
                 android:layout_below="@+id/textView6"
-                android:layout_toLeftOf="@+id/dayText"
-                android:layout_toStartOf="@+id/dayText" />
+                android:layout_alignRight="@+id/starText"
+                android:layout_alignEnd="@+id/starText"
+                android:checked="false" />
 
 
         </RelativeLayout>
